--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 "three": "./build/three.module.js",
                 "OrbitControls": "./build/controls/OrbitControls.js",
 				"PointerLockControls": "./build/controls/PointerLockControls.js",
-				"sceneSetup": "./modules/sceneSetup.js"
+				"sceneSetup": "./modules/sceneSetup.js",
+				"animate": "./modules/animate.js"
 
             }
         }
