--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 "OrbitControls": "./build/controls/OrbitControls.js",
 				"PointerLockControls": "./build/controls/PointerLockControls.js",
 				"sceneSetup": "./modules/sceneSetup.js",
-				"animate": "./modules/animate.js"
+				"animate": "./modules/animate.js",
+				"Reflector": "./build/misc/Reflector.js"
 
             }
         }
@@ -23,7 +24,6 @@
 	<body>
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script> -->
 
-		<script type="module" src="lighting_stuff.js"></script>
 		<script type="module" src="main.js"></script>
 		
 		
