--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
 		<title>three.js - water</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<!-- <link type="text/css" rel="stylesheet" href="main.css"> -->
+		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 	<body>
 
@@ -16,8 +16,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../build/three.module.js"
-                    
+					"three": "./node_modules/three/build/three.module.js"
 				}
 			}
 		</script>
@@ -25,14 +24,13 @@
 		<script type="module">
 
             import * as THREE from 'three';
-            // import { OrbitControls } from 'three/examples/jsm/controls/OrbitControls.js';
-            // import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
+            import { OrbitControls } from './node_modules/three/examples/jsm/controls/OrbitControls.js';
+            import { GLTFLoader } from './node_modules/three/examples/jsm/loaders/GLTFLoader.js';
 
-            // const controls = new OrbitControls( camera, renderer.domElement );
-            // const loader = new GLTFLoader();
+            const loader = new GLTFLoader();
 		</script>
 
 </body>
 </html>
 
-					<!-- "three/examples/jsm": "./jsm/" -->
+					
